Integrando o Console( bug de namespace resolvido com ajuda de Nathale)

--- a/Slim-intermediário/slim-skeleton/composer.json
+++ b/Slim-intermediário/slim-skeleton/composer.json
@@ -29,6 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "SonSlim\\":"src/",
             "Tests\\": "tests/"
         }
     },
