--- a/Slim-intermediário/slim-skeleton/composer.json
+++ b/Slim-intermediário/slim-skeleton/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "robmorgan/phinx": "^0.10.6",
-        "symfony/console": "^4.2"
+        "symfony/console": "^4.2",
+        "illuminate/database": "^5.7"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
